--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <i class="fas fa-file-image"></i>
                 <h3>Image Compressor</h3>
                 <p>Compress your images without losing quality.</p>
-                <a href="#">Use Tool</a>
+                <a href="tools/img-compress.html">Use Tool</a>
             </div>
 
             <div class="tool-card">
