--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <!-- Tools Section -->
         <section id="tools">
             <!-- Image Tools -->
-            <a href="img-compress.html" class="tool-card">
+            <a href="/img-compress.html" class="tool-card">
                 <i class="fas fa-file-image"></i>
                 <h3>Image Compressor</h3>
                 <p>Compress your images without losing quality.</p>
