--- a/index.html
+++ b/index.html
@@ -212,14 +212,11 @@
         <!-- Tools Section -->
         <section id="tools">
             <!-- Image Tools -->
-            <a href="https://shibammondal.github.io/tools/img-compress.html" class="tool-card-link">
-             <div class="tool-card">
-            <i class="fas fa-file-image"></i>
-            <h3>Image Compressor</h3>
-            <p>Compress your images without losing quality.</p>
-       </div>
-   </a>
-
+            <a href="https://shibammondal.github.io/tools/img-compress.html" class="tool-card">
+                <i class="fas fa-file-image"></i>
+                <h3>Image Compressor</h3>
+                <p>Compress your images without losing quality.</p>
+            </a>
 
             <a href="#" class="tool-card">
                 <i class="fas fa-exchange-alt"></i>
