--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </a>
 
             <!-- PDF Tools -->
-            <a href="#" class="tool-card">
+            <a href="pdf-compress.html" class="tool-card">
                 <i class="fas fa-file-pdf"></i>
                 <h3>PDF Compressor</h3>
                 <p>Reduce the size of your PDF files easily.</p>
