--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <p>Compress your images without losing quality.</p>
             </a>
 
-            <a href="#" class="tool-card">
+            <a href="img-converter.html" class="tool-card">
                 <i class="fas fa-exchange-alt"></i>
                 <h3>Image Converter</h3>
                 <p>Convert images to different formats like JPG, PNG, and more.</p>
