--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <p>Reduce the size of your PDF files easily.</p>
             </a>
 
-            <a href="#" class="tool-card">
+            <a href="pdf-word-converter.html" class="tool-card">
                 <i class="fas fa-file-word"></i>
                 <h3>PDF to Word</h3>
                 <p>Convert PDF files to editable Word documents.</p>
